change js show to slideDown; moved export buttons to top of map; fixed export help to have higher z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,10 +2,10 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require_self
  *= require fancybox
  *= require formtastic
  *= require vendor
+ *= require_self
  *= require_tree .
 */
 
@@ -125,4 +125,9 @@ tr.even_row {
 tr.odd_row td, tr.even_row td{
   padding: 5px;
   font-size: smaller;
+}
+
+/* override fancy box z-index */
+#fancybox-content {
+	z-index: 1200 !important;
 }
